--- a/wp-content/themes/municipio-nsr/style.css
+++ b/wp-content/themes/municipio-nsr/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:   NSR
  Description:  NSR Child theme developed by HIQ 
- Author:       HIQ
+ Author:       HIQ hiq.se
  Author URI:
  Template:     municipio
  Version:      1.0.0
