--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -38,7 +38,27 @@ article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before {
     margin-bottom:-10px;
   }
 }
-
+.collection {
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
+}
+.collection .date {
+  font-size:0.8rem
+}
+.listIcons {
+  display: table-cell;
+  vertical-align: middle;
+  padding-right:6px;
+}
+a.collection-item {
+  padding:10px 0;
+}
+.collection span {
+  position:relative;
+  top: 3px;
+}
+.collection a.collection-item:not(.active):hover {
+  background-color:#efefef !important;
+}
 
 
 
