friday update part 1

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -60,5 +60,10 @@ a.collection-item {
   background-color:#efefef !important;
 }
 
+.card-content h4 {
+  font-size: 1.2em !important;
+  font-weight: 600 !important;
+  color: #007586 !important;
+}
 
 
