Translation, news posts

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -109,6 +109,11 @@
 
     }
 
+    .post-header {
+        background:none;
+        border:none;
+    }
+
 
     // ***********************************************************************************
     // *** Wake up gfx card to rerender fonts
