Another New Visual composer ad-don for bricks with content... Birthday bash!

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -123,6 +123,10 @@
     }
 
 
+    .card-content .faq {
+        color:$palette-primary-black !important;
+    }
+
     // ***********************************************************************************
     // *** Wake up gfx card to rerender fonts
     // *** OBS! It breaks position: fixed so use it on children only under fixed element
