.home css adjustments

--- a/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/app.scss
@@ -64,6 +64,12 @@
 
     }
 
+    .is-child-theme.home {
+        // ***************************************************************
+        // *** Structure - Header
+        // ***************************************************************
+        @import 'layout/_home';
+    }
 
 
 
