--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_footer.scss
@@ -1,15 +1,16 @@
 .main-footer {
     background-color:$palette-primary-grey !important;
 }
-.home .main-footer, footer {
-    background-color:$palette-primary-white !important;
-}
 
 .main-footer {
     border-top: 4px solid alpha-color($palette-secondary-green, 0%, $type:'light');
     margin-top: 0;
     color:$palette-secondary-green;
 }
+.home .main-footer, .home footer {
+    background-color:$palette-primary-white !important;
+}
+
 
 .main-footer nav {
     background:none !important;
@@ -18,3 +19,4 @@
 .main-footer, .main-footer *, .page-footer {
     box-shadow: none !important;
 }
+
