--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -132,7 +132,8 @@
     .theme-green .unordered-list li:before,
     .theme-green article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before
     {
-        background:none !important;
+        background-color: #fff !important;
+        display:none;
     }
 
 
