--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -127,13 +127,11 @@
         color:$palette-primary-black !important;
     }
 
-    .theme-green .mce-content-body ul li:before,
-    .theme-green .modularity-mod-text .box-content ul li:before,
-    .theme-green .unordered-list li:before,
-    .theme-green article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before
-    {
+    .mce-content-body ul li:before,
+    .modularity-mod-text .box-content ul li:before,
+    .unordered-list li:before,
+    article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before {
         background-color: #fff !important;
-        display:none;
     }
 
 
