paddings margin accordion plugin

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -60,6 +60,7 @@ a.collection-item {
   top: 3px;
 }
 
+
 .collection a.collection-item:not(.active):hover {
   background-color:#efefef !important;
 }
@@ -151,6 +152,20 @@ a.collection-item {
     }
   }
 
+}
+
+
+.collapsible-body p,
+.collapsible-body i,
+.collapsible-body b,
+.collapsible-body h1,
+.collapsible-body h2,
+.collapsible-body h3,
+.collapsible-body h4,
+.collapsible-body h5,
+.collapsible-body h6 {
+  padding: 0 2rem 15px 2rem !important;
+  margin:0px;
 }
 
 
