--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_content.scss
@@ -131,7 +131,7 @@
     .modularity-mod-text .box-content ul li:before,
     .unordered-list li:before,
     article ul:not(.nav):not(.slider-items):not(.line-numbers) li:before {
-        background-color: #fff !important;
+        background-color: transparent !important;
     }
 
 
