--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -33,3 +33,29 @@
 .card.small .card-image+.card-content {
     max-height:100%;
 }
+
+/* Move later */
+.searchNSR input[type=search] {
+    border-bottom: 1px solid #23aabd;
+    box-shadow: 0 1px 0 0 #23aabd;
+}
+
+.searchNSR input[type=search].invalid, input[type=search]:focus.invalid {
+    border-bottom: 1px solid #f44336;
+    box-shadow: 0 1px 0 0 #f44336;
+}
+
+.searchNSR input[type=search].valid, input[type=search]:focus.valid {
+    border-bottom: 1px solid #4caf50;
+    box-shadow: 0 1px 0 0 #4caf50;
+}
+.searchNSR h4 {
+    text-transform: uppercase;
+    color:#fff !important;
+    margin:0 auto;
+    font-weight:normal;
+}
+li.before {
+    position: static !important;
+    background-color: transparent !important;
+}
