search sass and js fix, added post_type icons. FAQ custom post type

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -60,3 +60,7 @@ li.before {
     position: static !important;
     background-color: transparent !important;
 }
+
+.searchNSR p {
+    max-width:80% !important;
+}
