--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -312,6 +312,15 @@ input[type=text]:focus.invalid {
 
   }
 
+  .section {
+    position:absolute;
+    top:-10px;
+    right:10px;
+    font-weight:600;
+    color:$signalGreen !important;
+  }
+
+
   ul {
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
   }
@@ -344,7 +353,7 @@ input[type=text]:focus.invalid {
       display: table-cell;
 
       &:hover {
-        background-color: rgba(0,0,0, .1);
+        background-color: rgba(0,0,0, .2);
         box-shadow: none;
         text-decoration: none;
         color: $white !important;
