Open Hours - widget, weeks, weekends

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_boxes.scss
@@ -53,3 +53,6 @@
     color: $palette-primary-green !important;
     margin-left:10px !important;
 }
+.collection-item {
+    max-width:100% !important;
+}
