--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -64,3 +64,32 @@ li.before {
 .searchNSR p {
     max-width:80% !important;
 }
+.openhours.collection .date,.openhours.collection .date-day {
+    top: -5px !important;
+    font-size: 0.9rem !important;
+    display: inline-block;
+    width:30px;
+}
+.openhours.collection .date-day {
+    top: 0px !important;
+    color:alpha-color($palette-primary-grey, 50%, $type:'dark');
+    font-size: 0.9rem !important;
+    width:50px;
+}
+
+.weekender {
+    color:alpha-color($palette-primary-grey, 50%, $type:'dark');
+    font-style: italic;
+    font-size: .9rem !important;
+}
+
+.today {
+    font-weight:600;
+    color:$palette-primary-green;
+}
+.collection-header {
+    font-weight:600;
+    border-bottom: 2px solid alpha-color($palette-primary-grey, 34%, $type:'dark')  !important;
+    max-width:100% !important;
+
+}
