--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_typography.scss
@@ -88,10 +88,13 @@ article h4 {
 
 .text-align-left {
     text-align:left;
+
 }
 
 .text-align-right {
     text-align:right;
+    position:relative;
+    right:0px;
 }
 
 .theme-green a, .theme-green .breadcrumbs a {
