Added functionality to show all sections in one object as default.

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended-admin.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended-admin.scss
@@ -8,4 +8,7 @@
 .vc_pagelink {
   display:none;
 }
-
+.disable-when-all,.vc_dependent-hidden {
+  display:block !important;
+}
+//vc_dependent-hidden
