open hours allays title color

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -100,11 +100,23 @@ li.before {
     border-bottom: 2px solid alpha-color($palette-primary-grey, 34%, $type:'dark')  !important;
     max-width:100% !important;
 }
+
+.cleanHeader {
+    color:$palette-primary-green;
+}
+.cleanHeader {
+    border-bottom:none !important;
+}
+
+
 .collection-header i {
     top: 5px;
     position: relative;
     color:alpha-color($palette-primary-grey, 40%, $type:'dark');
 }
+
+
+
 .collection-subheader {
     font-weight:600;
 }
@@ -128,8 +140,5 @@ li.before {
 }
 .openhours .secondary-content {
    font-size: 0.8em;
-}
-.cleanHeader {
-    border-bottom:none !important;
 }
 
