--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -147,3 +147,6 @@ li.before {
 .openhours .secondary-content {
    font-size: 0.8em;
 }
+.gform_wrapper input[type=checkbox]+label, .gform_wrapper input[type=radio]+label {
+    padding-left:25px;
+}
